Restructure, initial gc